# blockly_html

./: .gitattributes  .gitignore  .hintrc  .vscodeignore  CMakeLists.txt  README.md  cleanup.py  requirements.txt
application/: example.html  index.css  index.html  index.py  main.py
application/backend/: README.md
application/backend/lib/: FPGA3TX64.ovpi  OVBaseIFX64.lib  readme.txt  sccbInitCfg.ini
application/backend/src/: DevVerifyGUI.ini  README.md  api_bridge.py  atbcfg_mgr.py  cases_mgr.py  cfg_mgr.py  fw_bin.py  gens_data.py  gens_mgr.py  ovatb.py  ovmcu.py  ovusb.py  ovvenus.py  parse_mgr.py  project_validator.py  report_mgr.py  shared_utils.py  stream_mgr.py
application/backend/src/gens/: Chip.py  GENS.py  README.md  TestCfg.py  draw_utils.py  gens_globals.py
application/backend/src/gens/Case/: TestCase.py
application/backend/src/gens/DP/: CRYPTO_TOP.py  DPTOP.py  EMBL.py  IDC.py  IDP.py  IMGMT.py  ISP.py  MIPIRX.py  MIPITX.py  RETIME.py
application/backend/src/gens/DP/RGBIR/: CIP.py  DPC.py  IRRM.py  RGBIRTOP.py  TOPCTRL.py
application/backend/src/gens/Define/: Para.py  Struct.py  board.py  cfgdist.py  distcfg.py  fwstruct.py
application/backend/src/gens/FW/: CFWST.py
application/backend/src/gens/RegTable/: RegGen.py  Regdefdist.py
application/backend/src/gens/SNR/: SNRBASE.py  SNRMDL.py  SNRPARSE.py  SNRTOP.py
application/backend/src/gens/STRM/: CTRL.py  STRMTOP.py
application/backend/src/gens/SYS/: Analog.py  CLK.py  PAD.py  PLL.py  SYSTOP.py  TPM.py
application/backend/src/gens/Utility/: DataTypes.py  Entity.py  JSONR.py  OrderClass.py  Others.py  Para.py  Reg.py
application/backend/src/resource/: README.md  TITAN_config.txt
application/blockly/: blockly_compressed.js
application/script/: binmode_json.js  flowchart.js  index.js  jsonout.js  python_custom.js
doc/ATB/TestBoard/OAX4kRegInfo/: OAX4K_Summary_Table_Ofs_Addr.xls
doc/Venus/: Venus common register control.xls
doc/Venus/venus_panel/: Thumbs.db
py_exe/: DevVerifyGUI.txt  README.md  SetupLicense.txt
release/: DevVerifyGUI.vsix  fpga_autotest.hex  fpga_autotest_V30.hex  mcu_i3c_beta.hex
sample/Unit_Test/Basic/: X3C_sensor.txt  testcase_basic_test_MCU.json  testcase_basic_test_MCU_parse_mcu.txt
sample/Unit_Test/EMBL/: X8B_EmbeddedLineSetting.txt  X8B_sensor.txt  testcase_EMBL.json  testcase_EMBL_parse_mcu.txt
tools/: bin2py.py  cleanup.py  cleanup_extensions.py
tools/nsis_bin/Contrib/EmbeddedLists/: EmbeddedLists.cpp  EmbeddedLists.rc  EmbeddedLists.sln  EmbeddedLists.vcproj
tools/nsis_bin/Contrib/Language files/: Afrikaans.nlf  Albanian.nlf  Amharic.nlf  Arabic.nlf  Basque.nlf  Belarusian.nlf  Bengali.nlf  Bosnian.nlf  Breton.nlf  Bulgarian.nlf  Burmese.nlf  Catalan.nlf  Cibemba.nlf  Croatian.nlf  Czech.nlf  Danish.nlf  Dutch.nlf  Efik.nlf  English.nlf  EnglishGB.nlf  Esperanto.nlf  Estonian.nlf  Farsi.nlf  Filipino.nlf  Finnish.nlf  French.nlf  Galician.nlf  German.nlf  Greek.nlf  Hebrew.nlf  Hindi.nlf  Hungarian.nlf  Icelandic.nlf  Igbo.nlf  Irish.nlf  Italian.nlf  Japanese.nlf  Khmer.nlf  Korean.nlf  Kurdish.nlf  (+37 more)
tools/nsis_bin/Contrib/Modern UI 2/Pages/: Finish__BIG.nsh  Welcome__BIG.nsh  switch_to_big.bat  switch_to_original.bat
tools/nsis_bin/Contrib/UIs/: switch_to_big.bat  switch_to_original.bat
tools/nsis_bin/Contrib/nsJSON/: nsJSON.rc  nsJSON.sln  nsJSON.vcxproj  nsJSON.vcxproj.filters
tools/nsis_bin/Contrib/nsJSON/ConsoleApp/: ConsoleApp.vcxproj  ConsoleApp.vcxproj.filters
tools/nsis_bin/Contrib/nsJSON/ConsoleAppDotNet/: ConsoleAppDotNet.csproj  Program.cs
tools/nsis_bin/Contrib/nsJSON/ConsoleAppDotNet/Properties/: AssemblyInfo.cs
tools/nsis_bin/Stubs/: bzip2-x86-ansi  bzip2-x86-unicode  bzip2_solid-x86-ansi  bzip2_solid-x86-unicode  lzma-x86-ansi  lzma-x86-unicode  lzma_solid-x86-ansi  lzma_solid-x86-unicode  zlib-x86-ansi  zlib-x86-unicode  zlib_solid-x86-ansi  zlib_solid-x86-unicode
vscode_ext/: .vscodeignore  README.md  extension.js  package-lock.json  package.json
